<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/Screen"
    tools:context="com.example.playd.weatherchallenge.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topLabel"
        android:text="@string/city_temp_header"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_alignEnd="@+id/temperatureLabel"
        android:layout_below="@+id/topLabel"
        android:paddingTop="5dp"
        android:text="@string/city_label" />

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/temperature"
        android:layout_alignBottom="@+id/temperature"
        android:layout_alignStart="@+id/tenDayBut"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/temperature_label"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/cityLabel"
        android:layout_below="@id/topLabel"
        android:id="@+id/cityName"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/temperatureLabel"
        android:layout_below="@id/cityName"
        android:id="@+id/temperature"
        android:paddingTop="5dp"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/temperatureLabel"
        android:layout_below="@id/cityName"
        android:id="@+id/tenDay"
        android:paddingTop="5dp"
        android:paddingLeft="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tenDayBut"
        android:layout_below="@id/getCityTemp"
        android:layout_centerHorizontal="true"
        android:text="@string/ten_day_forecast_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/getCityTemp"
        android:text="@string/city_temp_button"
        android:layout_below="@id/temperatureLabel"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ErrorText"
        android:layout_below="@id/tenDayBut"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
